Use initial capacity for map if possible