@@ -6,8 +6,6 @@ import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Iterator;
 import java.util.Map;
 import java.util.StringJoiner;
@@ -143,53 +141,51 @@ public class JsonTransformer<IN> implements Transformer<IN, Object> {
     }
 
     private static Map<Character, String> createEscapeMap() {
-        final Map<Character, String> map = new HashMap<>();
-        map.put('\\', "\\\\");
-        map.put('\"', "\\\"");
-        map.put('\b', "\\b");
-        map.put('\f', "\\f");
-        map.put('\n', "\\n");
-        map.put('\r', "\\r");
-        map.put('\t', "\\t");
-        map.put('/', "\\/");
-        map.put('\u0000', "\\u0000");
-        map.put('\u0001', "\\u0001");
-        map.put('\u0002', "\\u0002");
-        map.put('\u0003', "\\u0003");
-        map.put('\u0004', "\\u0004");
-        map.put('\u0005', "\\u0005");
-        map.put('\u0006', "\\u0006");
-        map.put('\u0007', "\\u0007");
-        // map.put('\u0008', "\\u0008");
-        // covered by map.put('\b', "\\b");
-        // map.put('\u0009', "\\u0009");
-        // covered by map.put('\t', "\\t");
-        // map.put((char) 10, "\\u000A");
-        // covered by map.put('\n', "\\n");
-        map.put('\u000B', "\\u000B");
-        // map.put('\u000C', "\\u000C");
-        // covered by map.put('\f', "\\f");
-        // map.put((char) 13, "\\u000D");
-        // covered by map.put('\r', "\\r");
-        map.put('\u000E', "\\u000E");
-        map.put('\u000F', "\\u000F");
-        map.put('\u0010', "\\u0010");
-        map.put('\u0011', "\\u0011");
-        map.put('\u0012', "\\u0012");
-        map.put('\u0013', "\\u0013");
-        map.put('\u0014', "\\u0014");
-        map.put('\u0015', "\\u0015");
-        map.put('\u0016', "\\u0016");
-        map.put('\u0017', "\\u0017");
-        map.put('\u0018', "\\u0018");
-        map.put('\u0019', "\\u0019");
-        map.put('\u001A', "\\u001A");
-        map.put('\u001B', "\\u001B");
-        map.put('\u001C', "\\u001C");
-        map.put('\u001D', "\\u001D");
-        map.put('\u001E', "\\u001E");
-        map.put('\u001F', "\\u001F");
-        return Collections.unmodifiableMap(map);
+        return Map.ofEntries(Map.entry('\\', "\\\\"),
+            Map.entry('\"', "\\\""),
+            Map.entry('\b', "\\b"),
+            Map.entry('\f', "\\f"),
+            Map.entry('\n', "\\n"),
+            Map.entry('\r', "\\r"),
+            Map.entry('\t', "\\t"),
+            Map.entry('/', "\\/"),
+            Map.entry('\u0000', "\\u0000"),
+            Map.entry('\u0001', "\\u0001"),
+            Map.entry('\u0002', "\\u0002"),
+            Map.entry('\u0003', "\\u0003"),
+            Map.entry('\u0004', "\\u0004"),
+            Map.entry('\u0005', "\\u0005"),
+            Map.entry('\u0006', "\\u0006"),
+            Map.entry('\u0007', "\\u0007"),
+            // map.put('\u0008', "\\u0008");
+            // covered by map.put('\b', "\\b");
+            // map.put('\u0009', "\\u0009");
+            // covered by map.put('\t', "\\t");
+            // map.put((char) 10, "\\u000A");
+            // covered by map.put('\n', "\\n");
+            Map.entry('\u000B', "\\u000B"),
+            // map.put('\u000C', "\\u000C");
+            // covered by map.put('\f', "\\f");
+            // map.put((char) 13, "\\u000D");
+            // covered by map.put('\r', "\\r");
+            Map.entry('\u000E', "\\u000E"),
+            Map.entry('\u000F', "\\u000F"),
+            Map.entry('\u0010', "\\u0010"),
+            Map.entry('\u0011', "\\u0011"),
+            Map.entry('\u0012', "\\u0012"),
+            Map.entry('\u0013', "\\u0013"),
+            Map.entry('\u0014', "\\u0014"),
+            Map.entry('\u0015', "\\u0015"),
+            Map.entry('\u0016', "\\u0016"),
+            Map.entry('\u0017', "\\u0017"),
+            Map.entry('\u0018', "\\u0018"),
+            Map.entry('\u0019', "\\u0019"),
+            Map.entry('\u001A', "\\u001A"),
+            Map.entry('\u001B', "\\u001B"),
+            Map.entry('\u001C', "\\u001C"),
+            Map.entry('\u001D', "\\u001D"),
+            Map.entry('\u001E', "\\u001E"),
+            Map.entry('\u001F', "\\u001F"));
     }
 
     public static class JsonTransformerBuilder<IN> {
